# serializer version: 1
# name: TransferUpdatesManagementCommandTest.test_asp_test
  '''
  Using *TEST* JSON serializers (SIRET number mapping)
  Connected to "foobar.com" as "django_tests"
  Current remote dir is "PWD"
  Starting DOWNLOAD of feedback files
  No feedback files found
  Employee record notifications processing done!
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_download[download]
  '''
  Connected to "foobar.com" as "django_tests"
  Current remote dir is "PWD"
  Starting DOWNLOAD of feedback files
  Fetching file: RIAE_FS_20210927000000_FichierRetour.json
  Parsed 1/1 files
  Deleting 'RIAE_FS_20210927000000_FichierRetour.json' from SFTP server
  Employee record notifications processing done!
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_download[upload]
  '''
  Connected to "foobar.com" as "django_tests"
  Current remote dir is "PWD"
  Starting UPLOAD of 1 notification(s)
  Successfully uploaded: RIAE_FS_20210927000000.json
  Employee record notifications processing done!
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_dry_run_empty_download
  '''
  Connected to "foobar.com" as "django_tests"
  Current remote dir is "PWD"
  Starting DOWNLOAD of feedback files
  No feedback files found
  Employee record notifications processing done!
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_preflight_with_error
  '''
  Preflight activated, checking for possible serialization errors...
  Found 2 object(s) to check, split in chunks of 700 objects.
  Checking file #1 (chunk of 2 objects)
  ERROR: serialization of EmployeeRecordUpdateNotification object (42) failed!
  > Got AttributeError when attempting to get a value for field `codeinseecom` on serializer `_AddressSerializer`.
  > The serializer field might be named incorrectly and not match any attribute or key on the `User` instance.
  > Original exception text was: 'NoneType' object has no attribute 'code'.
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_preflight_without_error
  '''
  Preflight activated, checking for possible serialization errors...
  Found 1 object(s) to check, split in chunks of 700 objects.
  Checking file #1 (chunk of 1 objects)
  All serializations ok, you may skip preflight...
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_preflight_without_object
  '''
  Preflight activated, checking for possible serialization errors...
  No object to check. Exiting preflight.
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_upload
  '''
  Connected to "foobar.com" as "django_tests"
  Current remote dir is "PWD"
  Starting UPLOAD of 1 notification(s)
  Successfully uploaded: RIAE_FS_20210927000000.json
  Employee record notifications processing done!
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_wrong_environment
  '''
  Your environment is missing ASP_FS_SFTP_HOST to run this command.
  
  '''
# ---
